...
                            .foregroundColor(.white)
                    }
                    
                }
            }
            ToolbarItem(placement: .topBarTrailing) {
                Button("Save") {
                    _ = try? model.saveNote()
                    self.dismiss()
                }
                .disabled(model.saveButtonDisabled)
            }
        }
...
